--- a/zerops.yml
+++ b/zerops.yml
@@ -2,12 +2,12 @@ zerops:
   - setup: python39
     build:
       deploy:
-        - python/~app.py
+        - app.py
       addToRunPrepare:
-        - python/requirements.txt
+        - requirements.txt
     run:
       prepareCommands:
-        - python3 -m pip install --ignore-installed -r python/requirements.txt
+        - python3 -m pip install --ignore-installed -r requirements.txt
       start: python3 app.py
       healthCheck:
         httpGet:
